made nav responsive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
    <main id="main-container">
@@ -27,7 +28,28 @@
                         <a href="">portfolio</a></div>
                      <div> 
                         <a href="">Contact</a></div>
-                     <div></div>
+                     <div>
+
+                        <div class="menu-bar">
+                           <input type="checkbox">
+                           <i class="fa-solid fa-bars"></i>
+                              <div class="all-menu">
+                                       <div> 
+                                <a href="">Home</a></div>
+                     <div> 
+                        <a href="">Services</a></div>
+                     <div> 
+                        <a href="">Testimonials</a></div>
+                     <div> 
+                        <a href="">Faq</a></div>
+                     <div> 
+                        <a href="">portfolio</a></div>
+                     <div> 
+                        <a href="">Contact</a></div>
+                     <div>
+                              </div>
+                        </div>
+                     </div>
                 </div>
             </div>
         </nav>
